commit before email

--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,89 +1,109 @@
 <br />
-<div class=" offset-3">
-  <iframe
-    width="560"
-    height="315"
-    src="https://www.youtube.com/embed/CQ7XUCQ6pbE?start=129"
-    frameborder="0"
-    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen
-  ></iframe>
+<div class=" offset-1">
+  <div class="ml-4">
+    <a class="navbar-brand" href="#">
+      <img
+        class="ml-4"
+        src="assets/img/aboutMe1.JPG"
+        alt="paper cranes counseling"
+        height="300"
+        width="auto"
+    /></a>
+    <a class="navbar-brand" href="#">
+      <img
+        class="ml-4"
+        src="assets/img/aboutMe2.jpg"
+        alt="paper cranes counseling"
+        height="300"
+        width="auto"
+    /></a>
+    <a class="navbar-brand" href="#">
+      <img
+        class="ml-4"
+        src="assets/img/aboutMe1.JPG"
+        alt="paper cranes counseling"
+        height="300"
+        width="auto"
+    /></a>
+  </div>
+  <!--
+    <iframe
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/CQ7XUCQ6pbE?start=129"
+      frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+    ></iframe>
+  -->
 </div>
 <br />
-<div class="ml-4">
-  <a class="navbar-brand" href="#">
-    <img
-      class="ml-4"
-      src="assets/img/potential.png"
-      alt="paper cranes counseling"
-      height="375"
-      width="auto"
-  /></a>
-  <a class="navbar-brand" href="#">
-    <img
-      class="ml-2"
-      src="assets/img/potential.png"
-      alt="paper cranes counseling"
-      height="375"
-      width="auto"
-  /></a>
-  <a class="navbar-brand" href="#">
-    <img
-      class="ml-2"
-      src="assets/img/potential.png"
-      alt="paper cranes counseling"
-      height="375"
-      width="auto"
-  /></a>
-  <a class="navbar-brand" href="#">
-    <img
-      class="ml-2"
-      src="assets/img/potential.png"
-      alt="paper cranes counseling"
-      height="375"
-      width="auto"
-  /></a>
-</div>
-<br />
-<br />
-<!--
-  <p class="col-md-5">
-    After many years as an entrepreneur and business executive, I decided to
-    follow my calling to become a therapist. I don't only work in theory and
-    methods. I merge my understanding of how people relate to each other, as well
-    as how they manage their feelings and emotions, with real-world experiences
-    that I have encountered as a marketing professional and team leader. I have
-    spent many years discovering how people make decisions, adopt behaviors,
-    learn, and communicate, which is why I find extreme satisfaction in helping
-    people learn more about themselves. I have received a M.A. in Counseling
-    Psychology, with a focus on Depth Psychology, from Pacifica Graduate
-    Institute. Depth psychology pays close attention to how the unconscious mind
-    influences how we experience life. In addition to working with individuals,
-    couples, and families to investigate unconscious motivations and what drives
-    them, I have taken a great interest in the problems that men face in society.
-    I believe that many of these issues are ultimately the catalysts for much of
-    the pain and suffering we are seeing around the world today. . ​ Currently I
-    work under the license of, and am supervised by: -Justin Yaros, LMFT, Lic.
-    #92508 -Patricia Taylor, PsyD., Lic. #14882, LCSW, Lic. #5928 at the Living
-    Success Center ​
-  </p>
--->
 <hr />
-<p class="ml-2">
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
-  convallis sagittis quam, a luctus mi pulvinar eu. Proin feugiat massa ut diam
-  volutpat porta. Nullam at quam leo. Suspendisse ut risus eu tellus egestas
-  rutrum. Sed turpis nisl, tempor eu odio in, convallis sodales libero. Integer
-  sit amet odio in odio molestie ullamcorper vitae at risus. Quisque varius leo
-  leo, ut viverra risus condimentum at. Pellentesque habitant morbi tristique
-  senectus et netus et malesuada fames ac turpis egestas. Phasellus posuere
-  laoreet neque, et gravida metus pretium in. Mauris libero odio, facilisis eu
-  dictum at, aliquet et erat. Cras eu cursus ligula. Curabitur vitae tempor
-  lectus. In dignissim, justo et ultrices viverra, massa velit gravida urna, in
-  ornare nisi sapien non turpis. Integer vitae metus bibendum, bibendum augue
-  volutpat, congue libero. Vestibulum in mauris vitae arcu cursus eleifend in eu
-  lacus. Sed consequat nisi nisi, et pellentesque nulla viverra id. Ut cursus
-  erat eu augue bibendum pellentesque. Pellentesque habitant morbi tristique
-  senectus et netus et malesuada fames ac turpis egestas.
-</p>
+<div class="ml-4 mr-4 about-me-body">
+  <p class="ml-4 mr-4">
+    Shavonne James, LCSW is the
+    <b>Founder and Director of Paper Cranes Counseling</b>. Her passion is
+    working with individuals experiencing
+    <b>life transitions, interpersonal struggles</b>, and those
+    <b>seeking balance</b>. She has worked with individuals experiencing
+    symptoms of <b>anxiety</b> (i.e. racing thoughts, hypervigilance,
+    restlessness, excessive fear/worry, insomnia, etc.), <b>depression</b> (i.e
+    feelings of guilt/shame, hopelessness, suicidal thoughts, etc.), trauma (i.e
+    childhood abuse/neglect, sexual assault, domestic violence, separation,
+    grief/loss, and near-death experiences), <b>mood disorders</b> (i.e. mania,
+    irritability, etc.), and <b>psychosis</b> (i.e. auditory/visual
+    hallucinations, delusional thoughts, etc.).
+  </p>
+  <br />
+
+  <p class="ml-4 mr-4">
+    Shavonne
+    <b>empowers her clients with the knowledge, tools and courage </b>to
+    overcome life's toughest challenges. Her clients appreciate her
+    <b
+      ><br />
+
+      blend of knowledge, empathy, and humor and her down-to-earth approach </b
+    >to therapy. She <b>creates a safe empowering space</b> where clients can
+    heal and reconnect with their authentic selves, their intuition and their
+    voice.
+  </p>
+  <br />
+
+  <p class="ml-4 mr-4">
+    Shavonne is certified in <b> Cognitive Behavioral Therapy</b> (CBT) and<b>
+      Interpersonal Psychotherapy </b
+    >(IPT). She also has advanced training in other
+    <b>Evidenced-Based Practices</b> such as
+    <b>Crisis Oriented Recovery Services </b>(CORS) and<b> Seeking Safety </b
+    >(focusing on treating trauma and substance use).
+  </p>
+  <br />
+  <p class="ml-4 mr-4">
+    Shavonne has developed her clinical skills through her work in
+    <b>community mental health </b>(in the Greater Los Angeles area),<b>
+      schools</b
+    >
+    (middle and high school), and at a<b> children’s advocacy center </b>(near
+    Fort Stewart military base). Shavonne received a
+    <b>Bachelor of Arts </b>degree in Psychology (with a double minor in
+    Philosophy and Creative Writing) from the <b>University of California </b>in
+    Merced and a <b>Master of Social Work</b> degree from
+    <b>Savannah State University</b>.
+  </p>
+  <br />
+
+  <p class="ml-4 mr-4">
+    She is a <b>Licensed Clinical Social Worker</b> in the
+    <b>State of California (LCSW84184) </b>and a certified clinician in
+    <b>Cognitive Behavioral Therapy</b>, through the
+    <b>Academy of Cognitive Therapy </b>(ACT), and
+    <b>Interpersonal Psychotherapy</b>, through the
+    <b>Interpersonal Psychotherapy Institute </b>(IPT Institute).
+  </p>
+</div>
+<hr />
+<br />
+<br />
+
 <hr />
