--- a/src/app/contactme/contactme.component.html
+++ b/src/app/contactme/contactme.component.html
@@ -1,29 +1,4 @@
-<!--
-  <div class="background col-md-6 offset-1">
-    <br /><br />
-
-    <form>
-      <div>
-        <input class="form-control" type="text" placeholder="Your Name" />
-      </div>
-      <br />
-      <div>
-        <input class="form-control" type="email" placeholder="Your Email" />
-      </div>
-      <br />
-      <div>
-        <textarea
-          class="form-control"
-          cols="80"
-          rows="8"
-          placeholder="What's on your mind?"
-        ></textarea>
-      </div>
-      <br />
-      <button class="btn btn-info offset-11">Submit</button>
-    </form>
-  </div>
--->
+<a href="mailto:sjames@papercranescounseling.com">Email Us</a>
 
 <div class="container col-md-7 offset-1">
   <h1>Contact Form</h1>
