--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,4 +1,166 @@
-<p>
-  faq works!
-  <img src="assets/img/paperCranes.png" alt="logo" height="100" width="100" />
-</p>
+<div class="faq-body">
+  <br />
+  <p class="ml-4 faq-title col-md-3">
+    <b>IS PAPER CRANES COUNSELIGN RIGHT FOR ME?</b>
+  </p>
+  <div class="ml-4 mr-4">
+    If you are new to therapy, you may be hesitant to begin due to fear of
+    vulnerability but there is something beautiful about discarding our masks
+    and peeling back our layers. Choosing to start therapy can be the first step
+    on an amazing journey of self-discovery and purposeful change! If you are
+    not new to therapy and are contemplating starting up again, think of therapy
+    through the words of Jelaluddin Rumi:<br />
+    <div class="col-md-4 offset-1 ">
+      <b>
+        “Come, come, whoever you are. Wanderer, worshipper, lover of leaving —
+        it doesn't matter, Ours is not a caravan of despair. Come, even if you
+        have broken your vow a hundred times, Come, come again, come.”
+      </b>
+      <br />
+    </div>
+    To further discuss whether Paper Cranes Counseling would be a good fit for
+    your treatment needs, please call us at (213) 214-2925 to schedule a free 20
+    minute phone consultation. We would be happy to discuss your unique
+    situation!
+  </div>
+  <br /><br />
+  <div>
+    <p class="ml-4 faq-title col-md-3"><b>HOW LONG ARE YOUR SESSIONS?</b></p>
+    <p class="ml-4 mr-4">
+      Therapy sessions are 50 minutes while initial intakes/assessments are 90
+      minutes. Longer sessions may be arranged on an as needed basis and must be
+      scheduled ahead of time. <b>Sessions are by appointment only.</b>
+    </p>
+  </div>
+  <br /><br />
+
+  <div>
+    <p class="ml-4 faq-title col-md-3"><b>WHAT ARE YOUR FEES?</b></p>
+    <div class="ml-4 mr-4">
+      <p>Initial Intake - 90 minutes: $125</p>
+      <p>
+        Individual Sessions - 50 minutes: $100 (adults, adolescents, children)
+      </p>
+      <p>*Payments are due at the beginning of each session.</p>
+    </div>
+  </div>
+  <br /><br />
+  <div>
+    <p class="ml-4 faq-title col-md-3 "><b>DO YOU OFFER SLIDING SCALE?</b></p>
+    <div class="ml-4 mr-4">
+      <p>
+        If you are experiencing financial hardships, we do have limited slots
+        offered on a sliding fee scale and is based on need and availability. We
+        are happy to discuss your specific situation during your initial phone
+        consultation.
+      </p>
+    </div>
+  </div>
+  <br /><br />
+  <div>
+    <p class="ml-4 faq-title col-md-3"><b>DO YOU TAKE MY INSURANCE??</b></p>
+    <div class="ml-4 mr-4">
+      <p>
+        Paper Cranes Counseling is considered an <b>out-of-network provider</b>.
+        What that means is that you will pay for therapy at the time of your
+        session and seek potential reimbursement from your insurance. It’s
+        important to look at your benefits if you will be seeking reimbursement,
+        although reimbursement is not guaranteed and you may not receive the
+        full amount.<br /><br />
+        Most people have higher deductibles, so unless you have a major surgery
+        planned, you may not hit your deductible. If you have to pay 10% up to
+        your deductible, that means that you’ll pay out of pocket for in-network
+        and out-of-network, so it’s about whether you want to decide on the
+        therapist that will be the best fit for your needs or have your
+        insurance decide.<br /><br />
+        Lastly, it’s important to know that insurances require we give you (or
+        your spouse/child) a mental health diagnosis. This is part of your
+        medical and insurance record. If you feel uncomfortable with having a
+        mental health diagnosis, which is another reason you may not want to use
+        your insurance benefits. <br /><br />
+        We are happy to discuss your specific situation during your initial
+        phone consultation.
+      </p>
+    </div>
+  </div>
+  <br /><br />
+  <div>
+    <p class="ml-4 faq-title col-md-3">
+      <b>WHAT FORMS OF PAYMENT DO YOU ACCEPT?</b>
+    </p>
+    <div class="ml-4 mr-4">
+      <p>
+        We accept all major credit cards, checks, cash, PayPal, and Automated
+        Clearing House (ACH) electronic payments. We offer easy online payment
+        options as well as automatic withdraw options for weekly clients.
+      </p>
+    </div>
+  </div>
+  <br /><br />
+  <div>
+    <p class="ml-4 faq-title col-md-3"><b>RESERVATION POLICIES:</b></p>
+    <div class="ml-4 mr-4">
+      <p>
+        Sessions are by appointment only. Please go to our
+        <a
+          href="https://www.therapyportal.com/p/papercranescounseling/"
+          target="_blank"
+          >Client Portal</a
+        >
+        to reserve a session.
+      </p>
+    </div>
+  </div>
+  <br /><br />
+  <div>
+    <p class="ml-4 faq-title col-md-3"><b>NO SHOW / CANCELLATION POLICY:</b></p>
+    <div class="ml-4 mr-4">
+      <p>
+        We encourage you to cancel your appointment within 24 hours as no shows
+        may still be charged the full rate for the session.
+      </p>
+    </div>
+  </div>
+  <br /><br />
+  <div>
+    <p class="ml-4 faq-title col-md-3"><b>RUNNING LATE?</b></p>
+    <div class="ml-4 mr-4">
+      <p>
+        We want you to get the most out of your session but if you are running
+        late, you are still entitled to the remainder of your reserved time.
+      </p>
+    </div>
+  </div>
+  <br /><br />
+  <div>
+    <p class="ml-4 faq-title col-md-3"><b>FACILITY:</b></p>
+    <div class="ml-4 mr-4">
+      <p>
+        We are located at 300 S. Beverly Dr., Suite 301 in Beverly Hills, CA
+        90212. You will see Milart Pharmacy on the side of the building.
+      </p>
+    </div>
+  </div>
+  <br /><br />
+  <div>
+    <p class="ml-4 faq-title col-md-3"><b>MEDICATION:</b></p>
+    <div class="ml-4 mr-4">
+      <p>
+        We, at Paper Cranes Counseling, do not prescribe psychiatric medication.
+        If you feel that you need to take medication, we can offer you outside
+        referrals.
+      </p>
+    </div>
+  </div>
+  <br /><br />
+  <div>
+    <p class="ml-4 faq-title col-md-3"><b>IMMINENT DANGER:</b></p>
+    <div class="ml-4 mr-4">
+      <p>
+        If you feel that you are in imminent danger or experiencing a
+        life-threatening emergency, please call 911 for assistance.
+      </p>
+    </div>
+  </div>
+  <br /><br />
+</div>
