--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,9 @@
-<div>
+<div class="background">
   <div class="col-md-11 home-missionStatementBody">
-    <p class="home-MissionStateMentHead">Mission Statement:</p>
-    Our mission is to empower people to reach their highest potetnial. I am 100%
-    focused on helping you <b>OVERCOME</b> life's toughest challenges and stuff
+    <p class="home-MissionStateMentHead">Welcome to Paper Cranes Counseling:</p>
+    Our mission is to empower people to reach their highest potential. Paper
+    Cranes Counseling is 100% focused on helping you <b>OVERCOME</b> life's
+    toughest challenges
   </div>
   <br />
   <div id="row1">
@@ -10,10 +11,10 @@
       <div class="col-md-12 ml-2">
         <br />
         <p>
-          My Approach No one form of therapy fits everyone. We all have our own
-          unique needs and personalities. I get to know the people I am working
-          with so that we can co-create a plan that is right for them. No matter
-          what style or methods used, I am always active and engaged. ​<br />
+          No one form of therapy fits everyone. We all have our own unique needs
+          and personalities. I get to know the people I am working with so that
+          we can co-create a plan that is right for them. No matter what style
+          or methods used, I am always active and engaged. ​<br />
           <br />
           My Counseling Psychology program was based in the theoretical
           framework of Depth Psychology. Depth Psychology pays close attention
