--- a/src/app/specialties/cbt/cbt.component.html
+++ b/src/app/specialties/cbt/cbt.component.html
@@ -1,6 +1,15 @@
 <div class="col-md-10 offset-1">
   <br />
-  <p class="cbt-title offset-4 col-md-4">WHAT IS CBT USED FOR?</p>
+  <p class="cbt-title col-md-4">WHAT IS CBT USED FOR?</p>
+  <span class="offset-6">.</span>
+  <div class="hello">
+    <img
+      src="https://sadanduseless.b-cdn.net/wp-content/uploads/2013/03/d18.jpg"
+      alt="paper cranes counseling"
+      height="auto"
+      width="475"
+    />
+  </div>
   <div class="cbt-body">
     CBT is used to treat a wide range of issues. It's often the preferred type
     of psychotherapy because it can quickly help you identify and cope with
@@ -31,8 +40,6 @@
             <li>Depression</li>
             <li>Bipolar disorders</li>
             <li>Anxiety disorders</li>
-            <li>Phobias</li>
-            <li>Obsessive-compulsive disorder (OCD)</li>
             <li>Eating disorders</li>
             <li>Substance use disorders</li>
             <li>PTSD</li>
@@ -41,16 +48,10 @@
       </div>
     </div>
     <div class="item3 offset-2">
-      <br />
-      <a class="offset-3">
-        <img
-          src="https://www.cbtnews.com/wp-content/uploads/2016/10/cbt_globe_teal.png"
-          alt="paper cranes counseling"
-          height="auto"
-          width="200"
-      /></a>
       <a class="navbar-brand">
         <br />
+        <br /><br />
+        <span></span>
         <img
           src="https://theladipogroup.com/wp-content/uploads/2017/11/young-black-couple-piggyback-in-garden-looking-at-PAWGEEX-2.jpg"
           alt="paper cranes counseling"
@@ -61,8 +62,8 @@
     <div class="item4"></div>
     <div class="item5"><div class="item7"></div></div>
   </div>
-  <p class="cbt-title col-md-5 offset-3">WHAT HAPPENS DURING CBT?</p>
-  <div class="cbt-body">
+  <p class="cbt-title col-md-4">WHAT HAPPENS DURING CBT?</p>
+  <div class="cbt-body hover">
     Your Thrive therapist will encourage you to talk about your thoughts and
     feelings and what's troubling you. Don't worry if you find it hard to open
     up about your feelings. Your therapist can help you gain more confidence and
@@ -74,7 +75,7 @@
     your particular situation and preferences. Your therapist may combine CBT
     with another therapeutic approach.
   </div>
-  <p class="cbt-title col-md-5 offset-3 mt-3">STEPS IN CBT</p>
+  <p class="cbt-title col-md-4 mt-3">STEPS IN CBT</p>
   <div class="cbt-body">
     <ul>
       <li>
@@ -111,7 +112,7 @@
     </ul>
   </div>
 
-  <p class="cbt-title col-md-5 offset-3 mt-3">Results</p>
+  <p class="cbt-title col-md-4 mt-3">Results</p>
   <div class="cbt-body">
     Cognitive behavioral therapy may not cure your condition or make an
     unpleasant situation go away. But it can give you the power to cope with
