--- a/src/app/specialties/specialties.component.html
+++ b/src/app/specialties/specialties.component.html
@@ -1,76 +1,94 @@
-<p>specialties works!</p>
-
-<div class="row">
-  <div class="col">
-    <div ngbDropdown class="d-inline-block">
-      <button
-        class="btn btn-outline-primary"
-        id="dropdownBasic1"
-        ngbDropdownToggle
-      >
-        Toggle dropdown
-      </button>
-      <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-        <button class="dropdown-item">Action - 1</button>
-        <button class="dropdown-item">Another Action</button>
-        <button class="dropdown-item">Something else is here</button>
-      </div>
-    </div>
-  </div>
-
-  <div class="row col-md-7">
-    <br />
+<br />
+<div class="specialties-body">
+  <div class="ml-4 mr-4">
+    <p class="offset-5"><b>Methods</b></p>
     <p>
-      My Approach No one form of therapy fits everyone. We all have our own
-      unique needs and personalities. I get to know the people I am working with
-      so that we can co-create a plan that is right for them. No matter what
-      style or methods used, I am always active and engaged. ​<br />
+      We use interventions from various Evidenced-Based Practices, such as
+      Cognitive Behavioral Therapy, Crisis Oriented Recovery Services,
+      Interpersonal Psychotherapy, and Seeking Safety. <br />
       <br />
-      My Counseling Psychology program was based in the theoretical framework of
-      Depth Psychology. Depth Psychology pays close attention to how the
-      unconscious mind influences how we experience life. Therapists who have
-      been trained in Depth theory investigate unconscious motivations and
-      drivers. It is also closely related to the psychodynamic approach. ​
-      <br />
-      <br />
-      Once we understand where our behaviors come from, we can often gain better
-      control over them or modify them if desired. I then work with clients by
-      drawing from modalities known as behavioral therapies (Cognitivey
-      Behavioral Therapy and Rational Emotive Behavioral Therapy), Narrative
-      Therapy, Emotionally Focused Therapy, just to name a few. These help to
-      modify behaviors and understand emotions that may be attached to them.
-      ​<br />
-      <br />I also draw from my years of entrepreneurial and business experience
-      to help those who are struggling to balance their career and life. I have
-      lived the pressures and challenges that can easily rob us of our energy,
-      and prevent us from enjoying our accomplishments. ​ Most importantly, we
-      work together to achieve the results you are seeking. ​
+
+      We also utilize our knowledge base of other effective types of therapy
+      such as Affirmative Therapy, Dialectic Behavioral Therapy, Family Systems
+      Therapy, Gestalt Therapy, Humanistic Therapy, Jungian Therapy,
+      Motivational Interviewing, Person-Centered Therapy, Play Therapy, Positive
+      Psychology, Psychodynamic Therapy, Solution-Focused Brief Therapy,
+      Strengths-Based Therapy, and Trauma-Focused Cognitive Behavioral Therapy.
     </p>
   </div>
-  <div class="col-md-5 mr-3">
-    <br />
-    <br />
-    <img
-      src="https://www.arborday.org/images/hero/medium/hero-green-leaves-in-sunlight.jpg"
-      alt="placeholder beach"
-      height="200"
-      width="435"
-    />
+  <br />
+  <div class="row ml-4 mr-4">
+    <div class="col">
+      <p><b>Cognitive Behavioral Therapy (CBT)</b></p>
+      <p>
+        Cognitive Behavioral Therapy focuses on recognizing the correlation
+        between your thoughts, feelings, and actions in an effort to change
+        disadvantageous patterns. It is a recommended treatment for depression,
+        anxiety, PTSD, and addictions/maladaptive coping.
+      </p>
+      <hr />
+      <p><b>Interpersonal Psychotherapy (IPT)</b></p>
+      <p>
+        Interpersonal Psychotherapy aims to target struggles with role
+        transitions, interpersonal deficits/disputes, and unresolved grief for a
+        reduction in symptom distress. It is a recommended treatment for mood
+        disorders (i.e. depression, bipolar disorder, etc.), anxiety, and eating
+        disorders.
+      </p>
+    </div>
     <hr />
-    <img
-      src="https://www.atlantisbahamas.com/media/Things%20To%20Do/Water%20Park/Beaches/Hero/Experiences_Beach.jpg"
-      alt="placeholder beach"
-      height="200"
-      width="435"
-    />
-  </div>
 
-  <div class=" col-md-6 ">
-    <br />
-    <div class="card bg-info">
-      <div class="card-body text-center">
-        <p class="card-text">You is kind you is smart you is important</p>
+    <div class="row col-md-7">
+      <div>
+        <p><b>Seeking Safety</b></p>
+        <p>
+          Seeking Safety is a present-focused therapy that centers on providing
+          psychoeducation, enhancing coping skills, and developing grounding
+          techniques. It is a recommended treatment for trauma and
+          addictions/maladaptive coping.
+        </p>
+
+        <br />
+        <hr />
+
+        <p><b>Crisis Oriented Recovery Services (CORS)</b></p>
+        <p>
+          Crisis Oriented Recovery Services (CORS) is a short-term therapy that
+          seeks to aid in the form of crisis intervention. CORS emphasizes the
+          utilization of adaptive coping skills to be able to return to the
+          level of functioning one had prior to the crisis.
+        </p>
       </div>
     </div>
+    <!--
+      <div class="col-md-5 mr-3">
+        <br />
+        <br />
+        <img
+          src="https://www.arborday.org/images/hero/medium/hero-green-leaves-in-sunlight.jpg"
+          alt="placeholder beach"
+          height="200"
+          width="435"
+        />
+        <hr />
+        <img
+          src="https://www.atlantisbahamas.com/media/Things%20To%20Do/Water%20Park/Beaches/Hero/Experiences_Beach.jpg"
+          alt="placeholder beach"
+          height="200"
+          width="435"
+        />
+      </div>
+    -->
+
+    <!--
+      <div class=" col-md-6 ">
+        <br />
+        <div class="card bg-info">
+          <div class="card-body text-center">
+            <p class="card-text">You is kind you is smart you is important</p>
+          </div>
+        </div>
+      </div>
+    -->
   </div>
 </div>
