--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -28,8 +28,8 @@
         <div class="dropdown">
           <a routerLink="/specialties">Specialties</a>
           <div class="dropdown-content">
-            <a routerLink="/cbt">CBT</a> <a routerLink="/specialties">DBT</a>
-            <a routerLink="/specialties">Option 3</a>
+            <a routerLink="/cbt">CBT</a> <a routerLink="/ipt">IPT</a>
+            <a routerLink="/specialties">General Therapy</a>
           </div>
         </div>
       </li>
