--- a/src/app/resources/resources.component.css
+++ b/src/app/resources/resources.component.css
@@ -3,8 +3,12 @@
   height: 250px;
   width: 600px;
   overflow-y: auto;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-
+button {
+  font-family: inherit;
+  font-size: 1em;
+}
 #row1 {
   display: flex;
   flex-direction: row;
