--- a/src/app/specialties/ipt/ipt.component.css
+++ b/src/app/specialties/ipt/ipt.component.css
@@ -1,4 +1,4 @@
-.cbt-title {
+.ipt-title {
   background-color: rgb(95, 95, 224);
   color: aliceblue;
   text-align: center;
@@ -10,23 +10,12 @@
   left: 30%;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-.cbt-body {
+.ipt-body {
   font-size: 130%;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 
   /* font-family: "Bree Serif", serife; */
 }
-.hello {
-  /* background-color: white;
-  padding: 20px; */
-  color: aliceblue;
-  display: none;
-}
-
-span:hover + div {
-  display: block;
-}
-
 .grid-container {
   display: grid;
   grid-template-columns: auto auto auto auto;
